new options set for gatling execution